--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "gsferro/odometer-easy",
     "type": "library",
     "license": "MIT",
-    "tags" : ["Laravel", "Plugin", "Odometer", "Easy"],
+    "keywords" : ["Laravel", "Plugin", "Odometer", "Easy"],
     "description": "Use the plugin odometer in project Laravel easy",
     "authors": [
         {
